# uk-dev-day-llm

./: .gitignore  README.md  pyproject.toml
notebooks/part-1/: embeddings.ipynb  simple-qna-chatbot.ipynb  summarization.ipynb  tagging.ipynb
notebooks/part-2/: agents.ipynb  embeddings.ipynb  rag.ipynb
part-2/: rag.ipynb
part-2/.ipynb_checkpoints/: agents-checkpoint.ipynb  rag-checkpoint.ipynb
